tests/ui/unpin_impl.stderr
error[E0282]: type annotations needed for `fn()`
 --> $DIR/unpin_impl.rs:6:14
  |
3 | #[cxx::bridge]
  | -------------- consider giving this pattern the explicit type `fn()`, with the type parameters specified
...
6 |         type Opaque;
  |              ^^^^^^ cannot infer type
